# eidos-mcp-registry

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MISSION.md  README.md  SECURITY.md
.forge/: manifest.yaml
.github/workflows/: ci.yml  publish.yml
.visionlog/: config.yaml
benchmarks/: ab_test.py  benchmark-protocol.md  cache-memo.py  collect.py  compare.py  run_after.py
benchmarks/before/: tool-count-baseline.json
benchmarks/results/: task1-before.json  task2-before.json  task3-before.json
daemon/: pyproject.toml
daemon/mcp_registry/: __init__.py  __main__.py  activity.py  catalog.py  cli.py  deploy_history.py  deployer.py  detector.py  events.py  health.py  notifications.py  renderer.py  scan_worker.py  scanner.py  server.py  server_catalog.json  store.py  webhook.py
daemon/mcp_registry/static/js/: activity-log.js  activity.js  adrs-page.js  docs-page.js  editor.js  groups-view.js  lazy-loading.js  nav.js  notifications.js  registry.js  servers-view.js  toast.js  token-savings.js  uhtml.js  why-pages.js
daemon/tests/: conftest.py  test_activity.py  test_api_new_endpoints.py  test_catalog.py  test_dependencies.py  test_deploy_diff.py  test_deploy_history.py  test_deploy_safety.py  test_e2e_playwright.py  test_gitignore.py  test_group_config_overrides.py  test_notifications.py  test_rollback_integration.py  test_schema_contract.py  test_scope_override.py  test_secrets_masking.py  test_store_integrity.py  test_webhook.py
docs/: philosophy.md  roadmap.md
